<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/CardHeaderText"
              android:text="@string/setuplayout_string_helpheader"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/NormalText"
              android:text="@string/setuplayout_string_helpsubheader"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/NormalText"
              android:text="@string/setuplayout_string_helppassword1"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/HintText"
              android:text="@string/setuplayout_string_helppassword2"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/NormalText"
              android:text="@string/setuplayout_string_helppassword3"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/NormalText"
              android:text="@string/setuplayout_string_helppassword4"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/NormalText"
              android:text="@string/setuplayout_string_helppassword5"/>
</LinearLayout>